# oxide

./: .editorconfig  .gitignore  .travis.yml  Cargo.toml  Makefile  README.md  Xargo.toml  build_tools.sh  x86_64-unknown-none-gnu.json
alloc_kernel/: Cargo.toml
alloc_kernel/src/: lib.rs
data/: grub.cfg
kernel/: Cargo.toml
kernel/src/: bitmap.rs  clock.rs  elf.rs  int_like.rs  lib.rs  logging.rs  runtime.rs  time.rs  vga.rs
kernel/src/arch/: mod.rs
kernel/src/arch/x86_64/: boot.asm  clock.rs  cmos.rs  init.asm  initrd.rs  io.rs  linker.ld  mem.rs  mod.rs  multiboot.asm  nmi.rs  pit.rs  start.asm  start.rs  tasking.rs  vga.rs
kernel/src/arch/x86_64/interrupts/: idt.rs  mod.rs
kernel/src/arch/x86_64/mem/: mod.rs  paging.rs  pmm.rs
kernel/src/arch/x86_64/mem/paging/: entry.rs  mapper.rs  mod.rs  table.rs  temp_page.rs
kernel/src/arch/x86_64/memory/: frame_allocator.rs  heap.rs  mod.rs  pmm.rs  stack_allocator.rs
kernel/src/arch/x86_64/memory/paging/: mapper.rs  mod.rs  table.rs  temp_page.rs
kernel/src/elf/: mod.rs  section.rs  strtab.rs  symbol.rs
kernel/src/filesystem/: mod.rs  tarfs.rs
kernel/src/tasking/: list.rs  mod.rs  switching.rs  task.rs
kernel/src/x86_64/: boot.asm  linker.ld
mk/: iso.mk  kernel.mk  modules.mk
modules/harddisk/: Cargo.toml
modules/harddisk/src/: lib.rs
