[workspace]
members = ["kernel", "alloc_kernel"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[replace]
"nom:3.2.1" = { git = "https://github.com/iBelieve/nom", branch = "feature/collections_to_alloc" }
"tar-parser:0.5.0" = { git = "https://github.com/iBelieve/tar-parser.rs", branch = "feature/no_std" }
