[package]
authors = ["Michael Spencer <sonrisesoftware@gmail.com>"]
name = "kernel"
publish = false
version = "0.1.0"

[dependencies]
bit_field = "0.7.0"
bitflags = "0.7.0"
linked_list_allocator = "0.2.3"
multiboot2 = "0.3.2"
nom = { version = "2.1.0", path = "../../nom" }
once = "0.3"
rlibc = "*"
spin = "*"
volatile = "*"

[dependencies.alloc_kernel]
path = "../alloc_kernel"

[dependencies.lazy_static]
features = ["spin_no_std"]
version = "0.2.1"

[dependencies.tar-parser]
features = ["no_std"]
path = "../../tar-parser.rs"

[dependencies.x86]
default-features = false
version = "*"

[lib]
crate-type = ["staticlib"]
