[package]
name = "kernel"
description = "Oxide kernel"
version = "0.0.1"
authors = ["Michael Spencer <sonrisesoftware@gmail.com>"]
publish = false

[lib]
crate-type = ["lib", "staticlib"]

[dependencies]
bit_field = "0.7.0"
bitflags = "0.7.0"
linked_list_allocator = "0.4.2"
multiboot2 = "0.3.2"
once = "0.3"
rlibc = "*"
spin = "*"
volatile = "*"

[dependencies.alloc_kernel]
path = "../alloc_kernel"

[dependencies.lazy_static]
version = "0.2.1"
features = ["spin_no_std"]

[dependencies.x86]
version = "*"
default-features = false

[dependencies.tar-parser]
version = "0.5.0"
default-features = false

[dependencies.nom]
version = "3.2.1"
default-features = false

[dependencies.goblin]
git = "https://github.com/m4b/goblin.git"
default-features = false
features = ["elf32", "elf64"]
